# Research-Helper

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  cleanup.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.speckit/: README.md  api.md  architecture.md  data-model.md  decisions.md  observability.md  product.md  risks.md  roadmap.md  security.md  tasks.md  ux.md
api/: index.py  requirements.txt
backend/app/: config.py  database.py  db.py  graph.py  main.py  models.py  pipeline.py  schemas.py
backend/app/graph/: builder.py  traversal.py
backend/app/ingestion/: chunker.py  concept_extractor.py  parser.py
backend/app/monitoring/: logging.py
backend/app/routes/: concepts.py  graph.py  learning_path.py  search.py  upload.py
backend/app/search/: semantic_search.py
backend/app/security/: file_validation.py
docs/: ingestion-pipeline.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: EmptyState.tsx  PageHeader.tsx  StatCard.tsx
frontend/src/hooks/: useAsync.ts
knowledge_vault.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: download_spacy_model.py  reset_db.py  test_graph_optimization.py  verify_normalization.py
shared/: README.md
tests/: conftest.py  test_chunker.py  test_fallbacks.py  test_graph_traversal.py  test_health.py  test_upload.py
(+11 files in other folders)
