[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-vault"
version = "0.1.0"
description = "Local-first knowledge operating system for concept graphs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "networkx>=3.3,<4.0",
  "pydantic>=2.7,<3.0",
  "pymupdf>=1.24,<2.0",
  "python-multipart>=0.0.9,<1.0",
  "sentence-transformers>=3.0,<4.0",
  "spacy>=3.7,<4.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.4,<25.0",
  "mypy>=1.10,<2.0",
  "pytest>=8.2,<9.0",
  "httpx>=0.27,<1.0",
  "ruff>=0.5,<1.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
plugins = []

[tool.pytest.ini_options]
testpaths = ["tests"]
